# ros-less-studio

./: .gitignore  python-studio-interface.py  run_objective.py
run_objective_rs/: Cargo.toml
run_objective_rs/src/: main.rs
studio_msgs/: CMakeLists.txt  package.xml
studio_msgs/msg/: BehaviorParameter.msg  MoveItErrorCodes.msg
studio_msgs/srv/: ExecuteObjective.srv
