[package]
name = "run_objective_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roslibrust = { version = "0.7", features = ["all"] }
roslibrust_codegen = "0.7.0"
roslibrust_codegen_macro = "0.7.0"
serde = "1.0.164"
smart-default = "0.7.1"
tokio = { version = "1", features = ["full"] }
