<package format="3">
  <name>studio_msgs</name>
  <version>2.4.0</version>
  <description>Messages, services and actions used for MoveIt Studio Behaviors.</description>
  <author email="joseph.schornak@picknik.ai">Joe Schornak</author>
  <maintainer email="joseph.schornak@picknik.ai">Joe Schornak</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>moveit_common</build_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
